src/assets/css/style.css
/* ... */
.gradient-border::after {
  content: '';
  position: absolute;
  z-index: -1;
  left: 1px;
  top: 1px;
  width: calc(100% - 2px);
  height: calc(100% - 2px);
  border-radius: 30px;
  background: linear-gradient(180deg, #1a063b 0%, #4710a1 100%);
}

/* strategies-area */
.reasons-area h2,
.strategies-area h2 {
  font-family: 'Plus Jakarta Sans', sans-serif;
  font-size: 52px;
  font-weight: 700;
}
.reasons-area p,
.strategies-area p {
  font-size: 20px;
  color: var(--white_color);
  margin-left: auto;
}
.reasons-area .heading-area,
.strategies-area .heading-area {
  flex-direction: row;
}
.feature-card {
  background-color: #0c1e3f;
  padding: 23px 22px;
  border-radius: 15px;
  display: flex;
  align-items: center;
  gap: 10px;
  width: 412px;
}

.feature-card-icon {
  background-image: linear-gradient(to right, #e101ff, #7f01ff);
  border-radius: 10px;
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.feature-card-icon i {
  color: var(--white_color);
  font-size: 18px;
}

.feature-card-title {
  color: var(--white_color);
  font-size: 16px;
  font-weight: 500;
  margin: 0;
}

.feature-card-row {
  display: flex;
  justify-content: space-between;
  gap: 20px;
  padding: 20px;
}

/* why us */
.colored-text {
  color: #9000ff !important;
  font-weight: 700;
  margin-bottom: 0px;
}

.icon-image {
  width: 100px;
  transition: transform 0.3s ease-in-out;
}

.title {
  font-size: 32px;
  font-weight: 700;
}

.description {
  font-size: 20px;
  margin-bottom: 0px;
}

.arrow-btn {
  width: 40px;
  height: 40px;
  border: 1px solid white;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  align-items: center;
  background-color: inherit;
  color: white;
  position: relative;
  margin: auto;
}

/* .section-container:hover .arrow-btn::after {
  content: '';
  position: absolute;
  color: white;
  background-color: red;
}

.section-container:hover .icon-image {
  transform: scale(2);
} */

.moving-gradient {
  position: absolute;
  top: -250px;
  left: 0; 
  width: 500px;
  height: 500px;
  background-image: linear-gradient(.20turn, #00D9FF, 10%, #9000FF);
  filter: blur(123.8px);
  border-radius: 50%; 
  transform-origin: center;
  z-index: -1;
  background-size: 200% 200%;
  animation: move-gradient-across 15s linear infinite alternate;
}

@keyframes move-gradient-across {
  0% {
    transform: translateX(0); 
  }
  100% {
    transform: translateX(calc(100vw - 500px)); 
  }
}

.section-gradient{
  position: absolute;
  width: 400px;
  height: 400px;
  background-image: linear-gradient(.45turn,#3700FF 20%, #FF0099, 40%, #FF0099);
  filter: blur(115.8px);
  border-radius: 50%; 
  transform-origin: center;
  z-index: -1;
   transform: rotate(40.33deg);
  background-size: 200% 200%;
}
.section-gradient-left{
  left: -250px; 
}
.section-gradient-right{
  right: -250px; 
   transform: scaleX(-1)
}

